@@ -1,3 +1,7 @@
+Wed Feb 29 17:02:18 EET 2012 (edwin)
+------------------------------------
+ * libclamav/bytecode_api*: Fix Sparc crash (bb #4324)
+
 Wed Feb 29 14:09:18 CET 2012 (acab)
 -----------------------------------
  * libclamav/pdf.c: scan the whole trailer for /H (bb#4315)
